output/tenant-b/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    generated-by: pkl
    tenant-name: tenant-b
  name: single-tenant-api-tenant-b
spec:
  template:
    metadata:
      labels:
        app: single-tenant-api-tenant-b
      name: single-tenant-api-tenant-b
    spec:
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: imagePullKey
      securityContext: {}
      schedulerName: default-scheduler
      restartPolicy: Always
      containers:
      - image: index.docker.io/account/api:1.0.1
        imagePullPolicy: Always
        terminationMessagePolicy: File
        terminationMessagePath: /dev/termination-log
        resources:
          requests:
            cpu: 500m
            memory: 600Mi
          limits:
            memory: 600Mi
        name: single-tenant-api-tenant-b
  replicas: 2
  selector:
    matchLabels:
      app: single-tenant-api-tenant-b
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
