output/tenant-b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt
    tenant-name: tenant-b
  name: single-tenant-api-tenant-b
spec:
  ingressClassName: nginx
  rules:
  - host: tenant-b.api.singletenant.com
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 4443
            name: single-tenant-api-tenant-b
        pathType: Prefix
  tls:
  - secretName: tenant-b-api-singletenant-com
    hosts:
    - tenant-b.api.singletenant.com
